# yolov8_ros_example

./: .gitignore  .gitmodules  LICENSE  README.md
yolov8_example/: CMakeLists.txt  package.xml
yolov8_example/launch/: yolov8_with_cam_launch.xml
